<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zx200_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kasahara.yuichiro.res@gmail.com">kasahara</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>navigation2</depend>
  <depend>tf_transformations</depend>
  <depend>robot_localization</depend>
  <depend>joint_state_publisher</depend> 
  <depend>tf2_ros</depend>
  <depend>nav2_container</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_amcl</depend>
  <depend>zx200_description</depend>
  <depend>gnss_localizer_ros2</depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
