<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zx200_unity</name>
  <version>0.0.0</version>
  <description>The zx200_unity package</description>
  <maintainer email="ws@todo.todo">common</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--	
  <depend>move_base</depend>
  -->

  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publihser</depend>
  <depend>robot_state_publisher</depend>
  <depend>nav2_container</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>robot_localization</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav2_amcl</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
